--- a/view/frontend/layout/default.xml
+++ b/view/frontend/layout/default.xml
@@ -8,8 +8,8 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceContainer name="page.wrapper">
-             <block class="Magentiz\AgeVerification\Block\AgeVerification" ifconfig="ageverification/general/enabled" name="ageverification-block" template="Magentiz_AgeVerification::age_verification.phtml">
-                <container name="ageverification-block-content" label="AgeVerification Block"/>
+             <block class="Magentiz\AgeVerification\Block\Popup" ifconfig="ageverification/popup/enabled" name="ageverification.popup" template="Magentiz_AgeVerification::age_verification_popup.phtml">
+                <container name="ageverification.popup.content" label="AgeVerification Block"/>
             </block>
         </referenceContainer>
     </body>
