--- a/view/frontend/web/template/order/payment/age-verification-markup.html
+++ b/view/frontend/web/template/order/payment/age-verification-markup.html
@@ -9,7 +9,7 @@
         data-bind="mageInit: {'collapsible':{'openedState': '_active'}}">
         <div class="payment-option-title field choice" data-role="title">
             <span class="action action-toggle" id="block-attachments-heading" role="heading" aria-level="2"
-                data-bind="text: getTitle()">
+                data-bind="i18n: getTitle()">
             </span>
         </div>
         <div class="payment-option-content" data-role="content">
