--- a/view/frontend/web/template/order/shipment/age-verification-markup.html
+++ b/view/frontend/web/template/order/shipment/age-verification-markup.html
@@ -8,7 +8,7 @@
     <div class="payment-option _collapsible opc-payment-additional order-attachments fieldset">
         <div class="payment-option-title field choice" data-role="title">
             <div class="step-title action action-toggle" id="block-attachments-heading" role="heading" aria-level="2"
-                data-bind="text: getTitle()">
+                data-bind="i18n: getTitle()">
             </div>
         </div>
         <div class="message warning"><span data-bind="i18n: 'You need to confirm your age before purchase our products!'"></span></div>
