--- a/view/frontend/templates/age_verification_popup.phtml
+++ b/view/frontend/templates/age_verification_popup.phtml
@@ -15,7 +15,7 @@ $disagreebtn   = $block->getDisagree();
 ?>
 
 <?php if ($block->showPopUp()) : ?>
-    <div class="outer-bg age-verification-container">
+    <div class="outer-bg age-verification-popup">
         <div id="popup" class="pop-cont age-pop-up ageconf">
             <div class="verify">
                 <p class="title"><?= /* @escapeNotVerified */ __($blocktitle); ?></p>
