--- a/view/frontend/web/css/source/_module.less
+++ b/view/frontend/web/css/source/_module.less
@@ -1,6 +1,6 @@
 /* Css for pop-up*/
 & when (@media-common = true) {
-    .age-verification-container {
+    .age-verification-popup {
         display: none;
     }
     .ageverification-poup {
