--- a/view/base/web/css/age-verification.css
+++ b/view/base/web/css/age-verification.css
@@ -23,8 +23,13 @@
     padding-bottom: 10px;
 }
 
+.age-verification-container .fieldset {
+    margin: 0;
+}
+
 .age-verification-container .mage-error {
     display: none;
+    color: #e02b27;
 }
 
 .age-verification-container .field-validate.error input {
